import Foundation

struct AccessibilityIdentifiers {
    static let scoreThumbnailPreviewArea = "scoreThumbnailPreviewArea"
    static let scoreDetailView = "scoreDetailView"
    static let addButton = "addButton"
    static let scoreThumbnailMenuButtonRenameLabel = "scoreThumbnailMenuButtonRenameLabel"
    static let scoreThumbnailMenuButtonDeleteLabel = "scoreThumbnailMenuButtonDeleteLabel"

    // HeaderView
    static let headerImage = "header_image"
    static let searchField = "search_field"

    // ProgressBarView
    static let progressBarForeground = "progress_bar_foreground"
    static let progressBarPercentageText = "progress_bar_percentage_text"

    // ScoreDetailHeaderView
    static let backButton = "back_button"

    // ScoreDetailFooterView
    static let playButton = "play_button"
    static let stopButton = "stop_button"

    // CustomTempoSlider
    static let sliderThumb = "slider_thumb"
    static let sliderTrack = "slider_track"

    // ToastView
    static let toastText = "toast_text"

    // PlaybackControlPanel
    static let playbackControlPanel = "playback_control_panel"
    static let playbackControlPanelBpmText = "playback_control_panel_bpm_text"
    static let playbackControlPanelPlayButton = "playback_control_panel_play_button"
    static let playbackControlPanelTempoSlider = "playback_control_panel_tempo_slider"
    static let playbackControlPanelDragHandle = "playback_control_panel_drag_handle"
    static let playbackControlPanelScoreTitle = "playback_control_panel_score_title"
    static let playbackControlToastView = "playback_control_panel_toast_view"
}
